[metadata]
name = ypy
version = 0.2
author = Yakir Reshef
author_email = yreshef@broadinstitute.org
description = Python utility functions used in yakirr repos
long_description = file: README.md
long_description_content_type = text/markdown
metadata_version = 2.1
url = https://github.com/yakirr/ypy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src